# RoguelikeAI

./: AI_MASTERY_PATH.md  Cargo.toml  Readme.md  SPEC.md
crates/ai-core/: Cargo.toml
crates/ai-core/src/: engine.rs  lib.rs
crates/ai-evals/: Cargo.toml
crates/ai-evals/src/: lib.rs
crates/ai-training/: Cargo.toml
crates/ai-training/src/: lib.rs
crates/rag-engine/: Cargo.toml
crates/rag-engine/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-ui/: Cargo.toml  index.html
src-ui/src/: main.rs
training_scripts/: qlora_finetune.py
