[workspace]
members = [
    "crates/ai-core",
    "crates/rag-engine",
    "crates/ai-training",
    "crates/ai-evals",
    "src-tauri",
    "src-ui"
]
resolver = "2"

[workspace.dependencies]
# Common
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Data & AI
lancedb = "0.4"
arrow-array = "50"
futures = "0.3"

# AI Core
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.19"

# Tauri
tauri = { version = "2.0.0", features = [] }
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"

# UI
dioxus = { version = "0.6.0" }
dioxus-web = { version = "0.6.0" }
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
